# objectCraft

./: .gitignore  .travis.yml  AUTHORS  LICENSE  Makefile.am  README  autogen.sh  build-mac.sh  build.sh  configure.ac
MinecraftServer/: AdvancedFile.h  AdvancedFile.m  AirBlock.h  AirBlock.m  Block.h  Block.m  Chunk.h  Chunk.m  ChunkColumn.h  ChunkColumn.m  ChunkManager.h  ChunkManager.m  ConfigManager.h  ConfigManager.m  DirtBlock.h  DirtBlock.m  EndGenerator.h  EndGenerator.m  Entity.h  Entity.m  EntityManager.h  EntityManager.m  FileManager.h  FileManager.m  LivingEntity.h  LivingEntity.m  MinecraftServer.1  MinecraftServer.h  MinecraftServer.m  MovingEntity.h  MovingEntity.m  NetherGenerator.h  NetherGenerator.m  OFDataArray+FloatReader.h  OFDataArray+FloatReader.m  OFDataArray+FloatWriter.h  OFDataArray+FloatWriter.m  OFDataArray+IntReader.h  OFDataArray+IntReader.m  OFDataArray+IntWriter.h  (+159 more)
MinecraftServer.xcodeproj/: project.pbxproj
MinecraftServer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MinecraftServer.xcodeproj/xcuserdata/Drakulix.xcuserdatad/xcschemes/: MinecraftServer - Mac - autotools.xcscheme  MinecraftServer.xcscheme  xcschememanagement.plist
MinecraftServer/ObjFW/: objfw-defs.h
build-mac/: libobjfw.7.0.dylib
