AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = objectCraft
AM_CPPFLAGS = $(OBJFW_CFLAGS) $(OBJC_CFLAGS)
objectCraft_LDADD = $(OBJFW_LIBS)
objectCraft_CPPFLAGS = $(OBJFW_CFLAGS) $(OBJC_CFLAGS)
objectCraft_SOURCES = MinecraftServer/main.m MinecraftServer/log.h MinecraftServer/ConfigManager.h MinecraftServer/ConfigManager.m MinecraftServer/RandomGenerator.h MinecraftServer/RandomGenerator.m MinecraftServer/MinecraftServer.h MinecraftServer/MinecraftServer.m
